Add rust crate for testing
Change-Id: Id05e2b06f05375ad6b9cc9d153b253f3295f0d70

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "playground"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+anyhow = "1.0"
+git2 = "0.20"
+
+[[bin]]
+name = "playground"
+path = "main.rs"
