--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,22 +1,18 @@
-name: Rust Verify
+on: [push, pull_request]
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+name: CI
 
 jobs:
-  verify:
+  check:
+    name: Check
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Rust
-        uses: actions/setup-rust@v1
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
         with:
-          rust-version: stable
-
-      - name: Check
-        run: cargo check
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: check
