Add rust crate for the constants
Change-Id: I3b6446ad66a3c8b382999cbec5391835a6672310

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 git2 = "0.20"
+dictionary = { path = "./dictionary/" }
+
+[workspace]
+members = ["dictionary"]
+resolver = "2"
 
 [[bin]]
 name = "playground"
